--- a/data/style.css
+++ b/data/style.css
@@ -366,6 +366,7 @@ div#vntags                    { margin: 15px 30px 0 30px; border-top: 1px solid 
 .releases td.tc1       { padding-left: 30px; width: 80px; }
 .releases td.tc2       { text-align: center; width: 50px; }
 .releases td.tc3       { text-align: right; padding: 0; width: 90px; }
+.releases td.tc_icons  { padding: 0 4px }
 .releases td.tc5       { width: 70px; }
 .releases td.tc5 a     { color: $maintext$; border: 0; }
 .releases td.tc6       { text-align: right; width: 25px; padding: 0; }
@@ -913,8 +914,8 @@ a .icons { cursor: pointer }
 $iconcss$
 
 
-.release_icons_container { width: 18px; height: 18px; float: right; margin-left: 4px; }
-.release_icons { width: 18px; height: 18px; }
+.release_icons_container { width: 16px; height: 16px; float: right; margin-left: 4px; }
+.release_icons { width: 16px; height: 16px; }
 .release_icons.not_voiced, .story_not_animated, .ero_not_animated { }
 .release_icons.ero_voiced, .story_simple_animated, .ero_simple_animated { filter: hue-rotate(30deg); }
 .release_icons.partially_voiced, .story_some_fully_animated, .ero_some_fully_animated { filter: invert(100%) hue-rotate(240deg) }
