--- a/data/style.css
+++ b/data/style.css
@@ -1,12 +1,16 @@
 *            { margin: 0; padding: 0; }
 body, td     { font: 12px "Tahoma", "Arial", sans-serif; }
 body         { $_bodybg$; color: $maintext$ }
-a            { color: $link$; text-decoration: none; }
-a:hover      { border-bottom: 1px dotted $maintext$; }
 table        { border-collapse: collapse; }
 table td,
 table th     { vertical-align: top; padding: 3px; }
 img          { border: none; }
+
+a,
+.fake_link       { color: $link$; text-decoration: none; cursor:pointer; }
+
+a:hover,
+.fake_link:hover { border-bottom: 1px dotted $maintext$; }
 
 table tr.odd,
 table.stripe tbody tr:nth-child(odd):not(.nostripe),
@@ -38,6 +42,14 @@ table.stripe tbody tr:nth-child(odd):not(.nostripe),
 #debug h2 { color: #f00!important; font-size: 20px; }
 #debug, #debug a { color: #fff!important; }
 
+.visuallyhidden {
+  position: absolute !important;
+  left: 0;
+  height: 1px; width: 1px;
+  border: 0; padding: 0;
+  overflow: hidden;
+  clip: rect(1px 1px 1px 1px);
+}
 
 /* Warning/Notice Box */
 div.warning, div.notice       { margin: 5px 10%; padding: 15px; background-color: $warnbg$; border: 1px solid $warnborder$; }
@@ -336,6 +348,10 @@ h1.boxtitle, h1.boxtitle a {
 
 
 /***** VN page *******/
+
+#nsfw_chk:checked ~ *                    { cursor: pointer; }
+#nsfw_chk:checked ~ * > #nsfw_show       { display: none; }
+#nsfw_chk:not(:checked) ~ * > #nsfw_hid  { display: none; }
 
 div.vndetails                 { margin: 0 auto; max-width: 820px; }
 div.vnimg                     { float: left; width: 250px; margin: 0 10px; }
