--- a/data/style.css
+++ b/data/style.css
@@ -353,6 +353,9 @@ h1.boxtitle, h1.boxtitle a {
 #nsfw_chk:checked ~ * > #nsfw_show       { display: none; }
 #nsfw_chk:not(:checked) ~ * > #nsfw_hid  { display: none; }
 
+#nsfwhide_chk:checked ~ * #nsfwshown   { display: none; }
+#nsfwhide_chk:not(:checked) ~ * .nsfw  { display: none; }
+
 div.vndetails                 { margin: 0 auto; max-width: 820px; }
 div.vnimg                     { float: left; width: 250px; margin: 0 10px; }
 div.vnimg i                   { display: block; width: 100%; text-align: center; font-size: 11px; }
