CSS/Build: Move minification and compression to "make prod"
This rather significantly speeds up development builds. Also simplifies
skingen.pl and its config a bit.

The new compressed files are written to /s/*/style.min.css{,.gz}, it is
up to the web server to serve those instead of /s/*/style.css.

--- a/data/style.css
+++ b/data/style.css
@@ -959,7 +959,7 @@ p.filselect i { font-style: normal }
 /****** Icons *******/
 
 .icons {
-  background: url(/f/icons.png?$version$) no-repeat;
+  background: url(/f/icons.png?$icons_version$) no-repeat;
   width: 16px;
   height: 14px;
   margin: 0 2px 0 0;
