--- a/data/style.css
+++ b/data/style.css
@@ -442,9 +442,9 @@ div#vntags                    { margin: 0 30px 0 30px; border-top: 1px solid $bo
 
 .votestats           { width: 630px; margin: 0 auto; }
 .votegraph           { float: left; margin-right: 20px }
-.votegraph td        { padding: 0 2px; }
+.votegraph td        { padding: 0 2px }
 .votegraph td.number { text-align: right }
-.votegraph td div    { float: left; height: 15px; background-color: $border$; margin-right: 2px; padding: 0; }
+.votegraph td div    { float: left; height: 16px; background-color: $border$; margin-right: 2px; padding: 0; }
 .votestats thead td  { background: transparent; text-align: center; padding: 2px; }
 .votestats tfoot td  { text-align: right }
 .votestats div       { text-align: center; padding-top: 5px; }
