--- a/data/style.css
+++ b/data/style.css
@@ -787,9 +787,9 @@ div.votelist td.tc2 { width: 50px; text-align: right; padding-right: 10px }
 /***** User notifications *****/
 
 .browse.notifies td.tc1       { width: 14px }
-.browse.notifies td.tc3       { width: 90px }
-.browse.notifies td.tc4       { width: 60px }
-.browse.notifies tbody td.tc5 { color: $grayedout$; cursor: pointer }
+.browse.notifies td.tc3       { width: 100px }
+.browse.notifies td.tc4       { width: 75px }
+.browse.notifies tbody td.tc5 a { color: $grayedout$ }
 .browse.notifies td.tc5 i     { font-style: normal; color: $maintext$ }
 .browse.notifies .unread td   { font-weight: bold }
 .browse.notifies tfoot td     { padding: 0 0 0 25px }
